--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,11 @@ img {
   height: auto;
 }
 
+*:focus {
+  outline: 2px dashed var(--purple);
+  outline-offset: 3px;
+}
+
 /* CONTAINER  */
 .container {
   width: 100%;
@@ -169,9 +174,72 @@ img {
 }
 /* HERO-END */
 
-/* REGISTRATION-FORM-BEGIN  */
+/* SIGN-UP-FORM-BEGIN  */
+.signup-form {
+  width: 100%;
+  max-width: 570px;
+  padding: 55px 60px 40px;
+  margin-left: 12px;
+  border-radius: 20px;
+  overflow: hidden;
+  background-color: #fff;
+}
 
+.signup-form-heading {
+  margin-top: 0;
+  margin-bottom: 65px;
+  font-size: 32px;
+  line-height: 131%;
+  font-weight: 600;
+}
 
-/* REGISTRATION-FORM-END */
+.signup-form-fields {
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 65px;
+}
+
+.signup-form-field {
+  padding-top: 15px;
+  padding-bottom: 14px;
+  border: 0;
+  border-bottom: 1px solid #555;
+  color: #555;
+}
+
+.signup-form-field:not(:last-child) {
+  margin-bottom: 20px;
+}
+
+.signup-form-field:focus {
+  border-color: #000;
+  font-weight: 600;
+  color: #000;
+}
+
+.signup-form-submit {
+  display: block;
+  width: 100%;
+  padding: 20px;
+  border: 0;
+  margin-bottom: 8px;
+  border-radius: 10px;
+  background-color: var(--purple);
+  font-weight: 600;
+  color: #fff;
+  cursor: pointer;
+}
+
+.signup-form-notice {
+  font-size: 11px;
+  line-height: 136%;
+  text-align: center;
+}
+
+.signup-form-notice-link {
+  font-weight: 500;
+  color: var(--red);
+}
+/* SIGN-UP-FORM-END */
 
 /* INTRO-PAGE-END */
